packages/grammar/test/corpus/indentation.txt
==================
4-space indentation for metadata
==================

2026-01-05T18:11 create lore "Entry with 4-space indent"
    type: "fact"
    subject: ^acme

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
tab indentation for metadata
==================

2026-01-05T18:11 create lore "Entry with tab indent"
	type: "fact"
	subject: ^acme

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
4-space indentation for content
==================

2026-01-05T18:11 create journal "Entry with 4-space content"

    # Notes
    This is content with 4-space indent.
    Second line also 4-space.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
tab indentation for content
==================

2026-01-05T18:11 create journal "Entry with tab content"

	# Notes
	This is content with tab indent.
	Second line also tab.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
tab indentation for markdown header
==================

2026-01-05T18:11 create opinion "Opinion with tab indent"
	confidence: "high"

	# Claim
	This is the claim.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
3-space indentation for metadata
==================

2026-01-05T18:11 create lore "Entry with 3-space indent"
   type: "fact"
   subject: ^acme

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
mixed 4-space indent throughout
==================

2026-01-05T18:11 create opinion "Full 4-space example"
    confidence: "high"
    related: ^other

    # Claim
    Indentation should be flexible.
    # Reasoning
    Different editors use different defaults.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
Empty Whitespace
==================

2026-01-05T18:11 create lore "Entry with extra whitespace"
   type: "fact"
   subject: ^acme
  
  
---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
1-space indentation for metadata
==================

2026-01-05T18:11 create lore "Entry with 1-space indent"
 type: "fact"
 subject: ^acme

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
2-space indentation for metadata
==================

2026-01-05T18:11 create lore "Entry with 2-space indent"
  type: "fact"
  subject: ^acme

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link))))))

==================
Content-only entry (no metadata)
==================

2026-01-05T18:11 create journal "Just content, no metadata"

  # Thoughts
  This entry has no metadata fields.
  Just content directly after blank line.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
Multiple consecutive blank lines in content
==================

2026-01-05T18:11 create journal "Multiple blank lines"

  # Notes
  First paragraph.


  Second paragraph after two blank lines.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
Entry ending at EOF (no trailing newline)
==================

2026-01-05T18:11 create lore "Entry at EOF"
  type: "fact"
---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value))))))

==================
Mixed tabs and spaces in same entry
==================

2026-01-05T18:11 create opinion "Mixed indent styles"
	confidence: "high"
  related: ^other

	# Claim
  This mixes tabs and spaces.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (metadata
        (key)
        (value
          (link)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
Content line that looks like metadata
==================

2026-01-05T18:11 create journal "Content with colon"

  # Notes
  This line has key: value syntax but is content.
  url: https://example.com is also just content.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (content_line
          (content_text))))))

==================
Deeply nested markdown headers
==================

2026-01-05T18:11 create journal "Multi-level headers"

  # Level 1
  Some text.
  ## Level 2
  More text.
  ### Level 3
  Even more text.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
Content directly after header (no blank line)
==================

2026-01-05T18:11 create journal "Direct after header"
  # Summary
  Content starts right after header, no blank line needed.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))

==================
Content directly after metadata (no blank line)
==================

2026-01-05T18:11 create lore "Direct after metadata"
  type: "fact"
  # Description
  Content section starts right after metadata, no blank line needed.

---

(source_file
  (entry
    (instance_entry
      (instance_header
        (timestamp)
        (instance_directive)
        (entity)
        (title))
      (metadata
        (key)
        (value
          (quoted_value)))
      (content
        (markdown_header
          (md_indicator)
          (md_heading_text))
        (content_line
          (content_text))))))
